--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/e93a406ff1.js" crossorigin="anonymous"></script>
+  <script src="https://js.stripe.com/v3"></script>
+  <script>
+    const stripe = Stripe('pk_test_vxcQ1W1v0KKDYUkoybgPESJJ00MS2FerLz')
+    const elements = Stripe.elements()
+  </script>
 </head>
 <body>
   <app-root></app-root>
