--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <script src="https://js.stripe.com/v3"></script>
   <script>
     const stripe = Stripe('pk_test_vxcQ1W1v0KKDYUkoybgPESJJ00MS2FerLz')
-    const elements = Stripe.elements()
+    const elements = stripe.elements()
   </script>
 </head>
 <body>
